Proyecto completo: footer, membresía y navegación interna según brief

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
               <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
-              <a class="nav__link">Conviértete en miembro</a>
+              <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link">Contactos</a>
+              <a class="nav__link" href="#contactos">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -199,7 +199,7 @@
             </div>
           </div>
         </section>
-        <section class="membership">
+        <section class="membership" id="membership">
           <h2 class="membership__title">
             ¡Convertirse en miembro es muy fácil!
           </h2>
@@ -257,7 +257,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer">
+      <footer class="footer" id="Contactos">
         <div class="footer__columns">
           <div class="footer__column">
             <img
