Correccion de html segun el brief

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer" id="Contactos">
+      <footer class="footer" id="contactos">
         <div class="footer__columns">
           <div class="footer__column">
             <img
