Entrega final del sprint 3

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
               <a class="nav__link" href="#membership">Conviértete en miembro</a>
             </li>
             <li>
-              <a class="nav__link" href="#contactos">Contactos</a>
+              <a class="nav__link" href="#footer">Contactos</a>
             </li>
           </ul>
         </nav>
@@ -257,7 +257,7 @@
           </ul>
         </section>
       </main>
-      <footer class="footer" id="contactos">
+      <footer class="footer" id="footer">
         <div class="footer__columns">
           <div class="footer__column">
             <img
